--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,18 @@ Pos=113,92
 Size=563,369
 Collapsed=0
 
+[Window][Gui]
+Pos=219,211
+Size=32,35
+Collapsed=0
+
+[Window][sidebar]
+Pos=0,0
+Size=300,768
+Collapsed=0
+
+[Window][chatbox]
+Pos=299,0
+Size=725,768
+Collapsed=0
+
