Code refactored database added

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,8 +5,8 @@ Collapsed=0
 
 [Window][Video]
 Pos=113,92
-Size=563,369
-Collapsed=0
+Size=490,370
+Collapsed=1
 
 [Window][Gui]
 Pos=219,211
@@ -20,6 +20,21 @@ Collapsed=0
 
 [Window][chatbox]
 Pos=299,0
-Size=725,768
+Size=871,772
+Collapsed=0
+
+[Window][mainwindow]
+Pos=0,0
+Size=1024,768
+Collapsed=0
+
+[Window][window]
+Pos=0,0
+Size=499,401
+Collapsed=0
+
+[Window][Profile]
+Pos=0,0
+Size=300,772
 Collapsed=0
 
