Database functions added

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,37 +4,42 @@ Size=400,400
 Collapsed=0
 
 [Window][Video]
-Pos=113,92
-Size=490,370
-Collapsed=1
-
-[Window][Gui]
-Pos=219,211
-Size=32,35
+Pos=60,60
+Size=701,471
 Collapsed=0
 
-[Window][sidebar]
-Pos=0,0
-Size=300,768
-Collapsed=0
-
-[Window][chatbox]
-Pos=299,0
-Size=871,772
-Collapsed=0
-
-[Window][mainwindow]
-Pos=0,0
-Size=1024,768
-Collapsed=0
-
-[Window][window]
-Pos=0,0
-Size=499,401
+[Window][Account]
+Pos=312,204
+Size=400,360
 Collapsed=0
 
 [Window][Profile]
 Pos=0,0
-Size=300,772
+Size=300,32
+Collapsed=0
+
+[Window][Register]
+Pos=312,204
+Size=400,360
+Collapsed=0
+
+[Window][Connecting]
+Pos=337,96
+Size=476,349
+Collapsed=0
+
+[Window][Connecting to server]
+Pos=312,204
+Size=400,360
+Collapsed=0
+
+[Window][]
+Pos=312,204
+Size=400,360
+Collapsed=0
+
+[Window][Filled circle example]
+Pos=39,7
+Size=183,105
 Collapsed=0
 
