Client frontend & functions updated

--- a/imgui.ini
+++ b/imgui.ini
@@ -15,7 +15,7 @@ Collapsed=0
 
 [Window][Profile]
 Pos=0,0
-Size=300,32
+Size=300,768
 Collapsed=0
 
 [Window][Register]
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Filled circle example]
 Pos=39,7
 Size=183,105
+Collapsed=0
+
+[Window][Chats]
+Pos=299,0
+Size=725,768
 Collapsed=0
 
