Sending files percentage added

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Video]
-Pos=139,77
-Size=632,420
+Pos=62,98
+Size=717,372
 Collapsed=0
 
 [Window][Account]
@@ -51,5 +51,15 @@ Collapsed=0
 [Window][Chatbox]
 Pos=299,0
 Size=725,768
+Collapsed=0
+
+[Window][Sending file(s)]
+Pos=60,60
+Size=32,35
+Collapsed=0
+
+[Window][Sending files]
+Pos=706,119
+Size=310,641
 Collapsed=0
 
