Download file added

--- a/imgui.ini
+++ b/imgui.ini
@@ -34,8 +34,8 @@ Size=400,360
 Collapsed=0
 
 [Window][]
-Pos=135,120
-Size=150,100
+Pos=706,119
+Size=310,641
 Collapsed=0
 
 [Window][Filled circle example]
@@ -61,5 +61,15 @@ Collapsed=0
 [Window][Sending files]
 Pos=706,119
 Size=310,641
+Collapsed=1
+
+[Window][Uploading files]
+Pos=307,119
+Size=354,641
+Collapsed=0
+
+[Window][Downloading files]
+Pos=661,119
+Size=354,641
 Collapsed=0
 
