Download confirmation added

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=152,46
+Size=678,600
 Collapsed=0
 
 [Window][Video]
@@ -71,5 +71,15 @@ Collapsed=1
 [Window][Downloading files]
 Pos=661,119
 Size=354,641
-Collapsed=1
+Collapsed=0
+
+[Window][Images]
+Pos=-38,0
+Size=1034,762
+Collapsed=0
+
+[Window][Image]
+Pos=184,83
+Size=756,638
+Collapsed=0
 
